--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -81,6 +81,7 @@ aes = { version = "0.8.4"}
 turso_parser = { workspace = true }
 aegis = "0.9.0"
 twox-hash = "2.1.1"
+intrusive-collections = "0.9.7"
 
 [build-dependencies]
 chrono = { workspace = true, default-features = false }
